feat: Lots of rewriting tests, updating stuff + refactoring.